--- a/src/index.css
+++ b/src/index.css
@@ -15,12 +15,23 @@
   --color-utility-success-400 : oklch(0.59 0.1429 155.15);
   --color-utility-success-500 : oklch(0.67 0.1596 155.59);
   --color-utility-success-700 : oklch(0.83 0.1293 158.51);
+  --color-utility-warning-50 : oklch(0.3 0.08 40.87);
+  --color-utility-warning-200 : oklch(0.46 0.1337 40.94);
+  --color-utility-warning-500 : oklch(0.75 0.1701 62.11);
   --color-utility-warning-600 : oklch(0.81 0.1634 75.65);
+  --color-utility-warning-700 : oklch(0.86 0.1499 84.74);
+  --color-utility-error-50 : oklch(0.3 0.0952 31.72);
+  --color-utility-error-200 : oklch(0.43 0.15 28.99);
   --color-utility-error-500 : oklch(0.64 0.2104 28.54);
+  --color-utility-error-700 : oklch(0.8 0.1094 24.57);
   --color-fg-secondary-700 : oklch(0.85 0.0043 271.36);
+  --color-bg-secondary : oklch(0.2 0.0111 260.66);
   --color-bg-quaternary : oklch(0.35 0.0128 267.17);
   --color-text-tertiary-600 : oklch(0.68 0.0081 260.73);
   --color-border-secondary : oklch(0.27 0.0178 266.3);
+  --color-text-brand-secondary-700: oklch(0.85 0.0043 271.36);
+
+  
 }
 
 /* * {
