L&F finished, data implemented but x and y axis legends are not visible

--- a/src/index.css
+++ b/src/index.css
@@ -29,9 +29,26 @@
   --color-bg-quaternary : oklch(0.35 0.0128 267.17);
   --color-text-tertiary-600 : oklch(0.68 0.0081 260.73);
   --color-border-secondary : oklch(0.27 0.0178 266.3);
-  --color-text-brand-secondary-700: oklch(0.85 0.0043 271.36);
+  --color-text-brand-secondary-700: oklch(0.85 0.0043 271.36); 
+}
 
-  
+@layer base {
+  :root {
+    /* ... */
+    --vis-tooltip-background-color: black !important;
+    --vis-tooltip-border-color: none !important;
+    --vis-tooltip-text-color: white !important;
+    --vis-tooltip-shadow-color: none !important;
+    --vis-tooltip-backdrop-filter: none !important;
+    --vis-tooltip-padding: none !important;
+
+    --vis-tooltip-border-radius: 20px !important;
+
+    --vis-primary-color: var(--primary);
+    /* change to any hsl value you want */
+    --vis-secondary-color: 160 81% 40%;
+    --vis-text-color: var(--muted-foreground);
+  }
 }
 
 /* * {
